# FroboMind

./: ~.bashrc
beginner_tutorials/: CMakeLists.txt
beginner_tutorials/src/: SceneStaubliRX60.wc.xml  listener.cpp  talker.cpp
fmApp/sdu/RX60Controller/: CMakeLists.txt  package.xml  readme.txt
fmApp/sdu/RX60Controller/launch/: rx60_controller.launch
fmApp/sdu/RX60Controller/src/rx60_controller/: RX60Driver.cpp  nodetest.cpp  rx60_controller_node.cpp
fmApp/sdu/beginner_tutorials/: CMakeLists.txt  package.xml
fmApp/sdu/beginner_tutorials/src/: talker.cpp
fmApp/sdu/qt_test/: CMakeLists.txt  mainpage.dox  package.xml  qt_test.files  qt_test.includes
fmApp/sdu/qt_test/include/qt_test/: main_window.hpp  qnode.hpp
fmApp/sdu/qt_test/src/: main.cpp  main_window.cpp  qnode.cpp
fmApp/sdu/qt_test/ui/: main_window.ui
fmApp/sdu/rsd_group1/: CMakeLists.txt  package.xml  shared.hpp
fmApp/sdu/rsd_group1/Conveyor/src/: conveyor.cpp
fmApp/sdu/rsd_group1/HMI/: HMI_new.files  HMI_new.includes
fmApp/sdu/rsd_group1/HMI/include/HMI/: main_window.hpp  qnode.hpp
fmApp/sdu/rsd_group1/HMI/resources/: images.qrc
fmApp/sdu/rsd_group1/HMI/src/: main_window.cpp  qnode.cpp
fmApp/sdu/rsd_group1/HMI/ui/: main_window.ui
fmApp/sdu/rsd_group1/HMI_bak/: CMakeLists.txt  HMI.files  HMI.includes  mainpage.dox  package.xml
fmApp/sdu/rsd_group1/HMI_bak/include/HMI/: main_window.hpp  qnode.hpp
fmApp/sdu/rsd_group1/HMI_bak/src/: main.cpp  main_window.cpp  qnode.cpp
fmApp/sdu/rsd_group1/HMI_bak/ui/: main_window.ui
fmApp/sdu/rsd_group1/Robotics/: Robotics.files
fmApp/sdu/rsd_group1/Robotics/src/: robot.cpp  robot.hpp  robotics.cpp
fmApp/sdu/rsd_group1/launch/: project.launch  robotics.launch  sorting_example_communication.launch
fmApp/sdu/rsd_group1/msg/: Log.msg  Num.msg  OEEmsg.msg  general.msg  lego_brick.msg  mes_mobile_command.msg  mes_mobile_status.msg  mes_order.msg  mes_sorting_command.msg  mes_sorting_status.msg  msg_hi.msg
fmApp/sdu/rsd_group1/scripts/: Lego_Brick.py  OEE.py  OEE.xml  OrderQ.py  config.xml  convert_image.py  plc_com.py  rsd_mes_client_node.py  rsd_mes_sorting_client_node.py  rsd_mes_sorting_publisher_dummy.py  xmlsettings.py
fmApp/sdu/rsd_group1/src/: .#hmi.cpp  conveyor_test.cpp  error_code.cpp  error_code.hpp  hmi.cpp  robotics.cpp
fmApp/sdu/rsd_vision/: CMakeLists.txt  cal.yml  package.xml  ros_ost.ini
fmApp/sdu/rsd_vision/launch/: vision.launch
fmApp/sdu/rsd_vision/src/: convert_image.py
fmApp/sdu/sdu_rsd_2014_group1/: fmMake.txt  kenneths_hemmeligheder
fmApp/sdu/wsg50-ros-pkg-master/wsg_50_driver/: package.xml
fmApp/sdu/wsg50-ros-pkg-master/wsg_50_driver/launch/: wsg_50_tcp.launch  wsg_50_tcp_script.launch
fmApp/sdu/wsg50-ros-pkg-master/wsg_50_driver/src/: main.cpp
fmApp/sdu_grassbots_trial_2013/: setup.py
fmApp/sdu_grassbots_trial_2013/launch/: base_system.launch  drive_system.launch  ui.launch
fmApp/sdu_grassbots_trial_2013/monitor/: plot_propulsion_feedback_node.py
fmApp/sdu_pichi_demining/launch/: bag-buildmap-trimble.launch  bag-buildmap.launch  test2013-06-21.launch
fmApp/sdu_pichi_demining/launch/nodes/: kalman_pose.launch  transform.launch  trimble_gps.launch  wads.launch
fmApp/sdu_pichi_demining/launch/sim/: sim_demining.launch
fmApp/sdu_pichi_demining/mission_planners/: demining.py
fmApp/sdu_pichi_demining/rviz/: bag.rviz
fmApp/sdu_pichi_demining/src/demining_smach/behaviours/: mine_simple_avoidance.py
fmControllers/platform/roboteq/include/roboteq/: channel.hpp
fmControllers/platform/roboteq/src/: channel.cpp  hbl1650.cpp  hbl2350.cpp
fmControllers/platform/roboteq_sdc2130/: CMakeLists.txt  package.xml
fmControllers/platform/roboteq_sdc2130/cfg/: sdc2130_dynparams.cfg
fmControllers/platform/roboteq_sdc2130/cfg/cpp/roboteq_sdc2130/: roboteq_sdc2130_dynparamsConfig.h
fmControllers/platform/roboteq_sdc2130/docs/: roboteq_sdc2130_dynparamsConfig-usage.dox  roboteq_sdc2130_dynparamsConfig.dox  roboteq_sdc2130_dynparamsConfig.wikidoc
fmControllers/platform/roboteq_sdc2130/include/roboteq_sdc2130/: channel.hpp  regulator.hpp  sdc2130.hpp
fmControllers/platform/roboteq_sdc2130/src/: channel.cpp  regulator.cpp  sdc2130.cpp
fmDependencies/occupancy_grid_utils/src/: combine_grids.cpp
fmLib/math/lib_dsp_filters/: CMakeLists.txt  package.xml
fmLib/math/lib_dsp_filters/src/: filter_test_node.cpp
fmLib/msgs/: CMakeLists.txt
fmLib/msgs/msg/: log.msg
fmLib/platform_support/sdu_grassbots/scripts/: test.py
fmLib/platform_support/sdu_grassbots/src/: sdu_grassbots_roboteq_node.cpp
fmProcessors/localization_mapping/occupancy_grid_assembler/scripts/: grid_updater.py
fmProcessors/localization_mapping/occupancy_grid_assembler/src/: grid_assembler.cpp
fmProcessors/localization_mapping/pose_2d_estimator/src/: pose_2d_estimator.py  pose_2d_estimator_node.py
